change name to languages and tools

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       </section>
 
       <section class="tech-stack">
-        <h2>Habilidades</h2>
+        <h2>Lenguajes y Tecnologías</h2>
         <div>
           <p>HTML</p>
           <p>CSS</p>
