--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           posibilidad de crear soluciones a través de software. <br />Soy
           organizado, proactivo y capaz de tomar decisiones, así como también de
           comunicarme fluidamente. <br />Tengo experiencia trabajando con
-          metodologias ágiles y disfruto de trabajar en equipo. Me gustaría
+          metodologías ágiles y disfruto de trabajar en equipo. Me gustaría
           desarrollar mis habilidades profesionales y seguir aprendiendo.
         </p>
       </article>
@@ -71,7 +71,7 @@
         <h2>Experiencia</h2>
         <div class="job">
           <div>
-            <p>Desarollador Full Stack - Alkemy</p>
+            <p>Desarollador Web Full Stack - Alkemy</p>
             <p>10/2021 - 12/2021</p>
           </div>
           <p class="job-description">
@@ -136,11 +136,6 @@
           <p>Inglés - Avanzado/Fluido</p>
           <p>Italiano - Básico</p>
         </div>
-      </section>
-
-      <section class="cv">
-        <h2></h2>
-        <p>Este CV fue hecho con HTML y SCSS</p>
       </section>
     </main>
   </body>
